[package]
name = "cbc-bitflip"
version = "0.1.0"
authors = ["Giacomo Pasini <g.pasini98@gmail.com>"]
edition = "2018"

[dependencies]
openssl = {version = "0.10.28", features = ["vendored"]}
rand = "0.7.3"
jacopone = { git = "https://github.com/Zeegomo/jacopone-lib" }
base64 = "0.9.0"
lazy_static = "1.4.0"