[package]
name = "ecb-byte-dec"
version = "0.1.0"
authors = ["Giacomo Pasini <g.pasini98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.29"
rand = "0.7.3"
jacopone = { git = "https://github.com/Zeegomo/jacopone-lib" }